--- a/teams.html
+++ b/teams.html
@@ -699,6 +699,25 @@
                     </div>
                     <br>
                     <div class="col-lg-3 col-md-6">
+                        <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+                            <img src="assets/img/2nd_year/Ayushi Singh.jpg" alt="Speaker 2" class="img-fluid image-resize">
+                            <div class="details">
+                                <h3><a href="speaker-details.html">Ayushi Singh</a></h3>
+                                <p></p>
+                                <div class="social">
+                                    <a href="https://github.com/mravtechinfo"><i class="bi bi-github"></i></a>
+                                    <a href="https://www.facebook.com/anubhav.miller/"><i
+                                            class="bi bi-facebook"></i></a>
+                                    <a href="https://www.instagram.com/mr_av_tech_info/"><i
+                                            class="bi bi-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/anubhav-miller-4035591a2/
+                  "><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="col-lg-3 col-md-6">
                         <div class="speaker" data-aos="fade-up" data-aos-delay="300">
                             <img src="assets/img/2nd_year/Anjali Mishra.jpg" alt="Speaker 3" class="img-fluid image-resize">
                             <div class="details">
