--- a/teams.html
+++ b/teams.html
@@ -798,7 +798,7 @@
                         <div class="speaker" data-aos="fade-up" data-aos-delay="300">
                             <img src="assets/img/2nd_year/Niraj Kumar.jpg" alt="Speaker 6" class="img-fluid image-resize">
                             <div class="details">
-                                <h3><a href="speaker-details.html">Niraj Kumari</a></h3>
+                                <h3><a href="speaker-details.html">Niraj Kumar</a></h3>
                                 <p></p>
                                 <div class="social">
                                     <a href=""><i class="bi bi-github"></i></a>
